@@ -82,7 +82,8 @@ setup(name='chimera-python',
                           "sqlalchemy >= 0.4.5",
                           "Elixir >= 0.5.2",
                           "pyephem > 3.7",
-                          "python-dateutil >= 1.4"] + win32_deps + linux_deps,
+                          "python-dateutil >= 1.4",
+                          "RO >= 2.2.7"] + win32_deps + linux_deps,
 
       dependency_links = ["http://www.stsci.edu/resources/software_hardware/pyfits/pyfits-1.3.tar.gz",
                           "http://astropy.scipy.org/svn/astrolib/trunk/coords#egg=coords-trunk",
